# dsa-2023-4

./: .gitignore  README.md
labs/: README.md  __main__.py  pyproject.toml
labs/lab1/: README.md
labs/lab1/core/: README.md
labs/lab1/core/maths/: README.md  exercise.py  solution.py
labs/lab1/core/pair/: README.md  exercise.py  solution.py
labs/lab1/core/player/: README.md  exercise.py  solution.py
labs/lab2/: README.md
labs/lab2/core/: README.md
labs/lab2/core/doubly_linked_list/: README.md  exercise.py  solution.py
labs/lab2/core/singly_linked_list/: README.md  exercise.py  solution.py
labs/lab2/plus/: README.md
labs/lab3/: README.md
labs/lab3/core/: README.md
labs/lab3/plus/: README.md
labs/lab4/: README.md
labs/lab4/core/: README.md
labs/lab4/plus/: README.md
labs/lab5/: README.md
labs/lab5/core/: README.md
labs/lab5/plus/: README.md
labs/lab6/: README.md
labs/lab6/core/: README.md
labs/lab6/plus/: README.md
labs/lab7/: README.md
labs/lab7/core/: README.md
labs/lab7/plus/: README.md
labs/lab8/: README.md
labs/lab8/core/: README.md
labs/lab8/plus/: README.md
labs/lib/: app.py  app.tcss  arg_parser.py  array.py  base.py  cli.py  errors.py  iterator.py  magic.py  numberify.py  random.py  string.py  test.py  time.py  type_vars.py
labs/lib/labs/: __init__.py  tests.py
labs/lib/resources/: __init__.py  python_ascii_counts.txt
labs/lib/test/: __init__.py  annotations.py  case_generator.py  cases.py  parameters.py  runner.py  source_code.py  suite.py
labs/lib/tui/: __init__.py  app.py  app.tcss
(+118 files in other folders)
